--- a/app/src/main/res/drawable/ic_hamburger_menu_bottom_bar.xml
+++ b/app/src/main/res/drawable/ic_hamburger_menu_bottom_bar.xml
@@ -4,24 +4,24 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="?attr/menuIconColor"
         android:pathData="M3,12L21,12"
         android:strokeWidth="2"
-        android:strokeColor="#FFFFFF"
+        android:strokeColor="?attr/menuIconColor"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="?attr/menuIconColor"
         android:pathData="M3,6L21,6"
         android:strokeWidth="2"
-        android:strokeColor="#FFFFFF"
+        android:strokeColor="?attr/menuIconColor"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="?attr/menuIconColor"
         android:pathData="M3,18L21,18"
         android:strokeWidth="2"
-        android:strokeColor="#FFFFFF"
+        android:strokeColor="?attr/menuIconColor"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
