--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,16 @@
     <color name="color_gray">#474747</color>
     <color name="loadingBackground">#FFFFFF</color>
 
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="blue">#039be5</color>
+    <color name="light_blue">#63ccff</color>
+    <color name="dark_blue">#006db3</color>
+    <color name="green">#2e7d32</color>
+    <color name="light_green">#60ad5e</color>
+    <color name="dark_green">#005005</color>
+    <color name="dark_grey">#2C2C2C</color>
+    <color name="light_grey">#AFAFAF</color>
+    <color name="grey">#242424</color>
+
+
 </resources>
