bottom nav view has been implemented

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="blue">#039be5</color>
     <color name="light_blue">#63ccff</color>
     <color name="dark_blue">#006db3</color>
+    <color name="dark2_blue">#15488C</color>
+
     <color name="green">#2e7d32</color>
     <color name="light_green">#60ad5e</color>
     <color name="dark_green">#005005</color>
