--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,7 +18,6 @@
     <style name="MainTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
-        <item name="colorPrimaryVariant">@color/dark_blue</item>
         <item name="colorPrimaryDark">@color/dark_blue</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorAccent">@color/light_green</item>
@@ -30,5 +29,23 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item><!-- Customize your theme here. -->
         <item name="bottomSheetBackgroundColor">@color/dark_grey</item>
         <item name="menuIconColor">@color/grey</item>
+
+        <item name="bottomNavigationStyle">@style/MyBottomNavigationView</item>
     </style>
+
+
+
+
+       <!--Bottom Navigation View-->
+    <style name="MyBottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+    </style>
+
+    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
+        <item name="colorPrimary">@color/dark2_blue</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+    </style>
+
+
 </resources>
