--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="corner_radius">10dp</dimen>
     <dimen name="settings_header_margin_top">10dp</dimen>
+    <dimen name="bottomsheet_peek_height">15dp</dimen>
 </resources>
