--- a/app/src/main/res/layout/perseverance_fragment.xml
+++ b/app/src/main/res/layout/perseverance_fragment.xml
@@ -1,104 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".ui.main.view.perseverance.PerseveranceFragment">
-
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/main"
-    android:layout_width="match_parent"
+<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:layout_width="match_parent"
+    tools:context=".ui.main.view.perseverance.PerseveranceFragment">
 
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_prev_cam"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/button"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf= "@+id/button_next_cam"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_marginLeft="5dp"
-        android:id="@+id/button_next_cam"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="@string/next_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_prev_cam"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-
-    <TextView
-        android:id="@+id/rover_cam_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_next_cam"
-        android:text="Rover Camera" />
-    <TextView
-        android:id="@+id/rover_cam_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rover_cam_description"
-        android:text="Date" />
-
-    <TextView
-        android:id="@+id/rover_photo_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Photo №: 32"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rover_cam_date" />
-
-    <ru.gb.lesson1.ui.main.view.view.EquilateralImageView
-        android:id="@+id/image_view_marsCam"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "10dp"
-        android:layout_gravity="center"
-        android:contentDescription="@string/photo_of_the_day_stub"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rover_photo_number"
-        app:srcCompat="@drawable/ic_no_photo_vector" />
+        android:padding="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-<include layout="@layout/bottom_sheet_layout" />
-
-<FrameLayout
-    android:id="@+id/loadingLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/colorOnPrimary"
-    android:visibility="gone"
-    tools:visibility="gone">
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_prev_cam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/button"
+                android:layout_marginTop="60dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_next_cam" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_marginStart="5dp"
+                android:id="@+id/button_next_cam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:text="@string/next_button"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/button_prev_cam"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+            <TextView
+                android:id="@+id/rover_cam_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_next_cam"
+                android:text="@string/rover_camera" />
+
+            <TextView
+                android:id="@+id/rover_cam_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rover_cam_description"
+                android:text="@string/date" />
+
+            <TextView
+                android:id="@+id/rover_photo_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/photo_32"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rover_cam_date" />
+
+            <ru.gb.lesson1.ui.main.view.view.EquilateralImageView
+                android:id="@+id/image_view_marsCam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/photo_of_the_day_stub"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rover_photo_number"
+                app:srcCompat="@drawable/ic_no_photo_vector" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <FrameLayout
+            android:id="@+id/loadingLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorOnPrimary"
+            android:visibility="gone"
+            tools:visibility="gone">
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
+
+    </FrameLayout>
+</androidx.core.widget.NestedScrollView>
