Lesson 5 implemented zoom animation

--- a/app/src/main/res/layout/curiosity_fragment.xml
+++ b/app/src/main/res/layout/curiosity_fragment.xml
@@ -9,7 +9,8 @@ tools:context=".ui.main.view.curiosity.CuriosityFragment">
 
     <FrameLayout
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:padding="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
