--- a/app/src/main/res/layout/main_fragment_start.xml
+++ b/app/src/main/res/layout/main_fragment_start.xml
@@ -10,7 +10,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/main_fragment_animation"
+        app:layoutDescription="@xml/main_fragment_scene"
         android:paddingStart="10dp"
         android:paddingEnd="10dp">
 
