--- a/app/src/main/res/layout/perseverance_fragment.xml
+++ b/app/src/main/res/layout/perseverance_fragment.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
